--- a/FreightBKShippingWebApp/Components/Pages/BillPage/BillPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/BillPage/BillPage.razor
@@ -48,11 +48,11 @@
         <DxGridDataColumn FieldName="BillDueDate" Caption="Due Date" Width="120" />
         <DxGridDataColumn FieldName="BillJobNo" Caption="Job No" Width="120" />
         <DxGridDataColumn FieldName="BillJobType" Caption="Job Type" Width="120" />
-        <DxGridDataColumn FieldName="BillPartyId" Caption="Customer" Width="180" />
+        <DxGridDataColumn FieldName="partyname" Caption="Customer" Width="180" />
         <DxGridDataColumn FieldName="BillVoucherId" Caption="Voucher Type" Width="120" />
         <DxGridDataColumn FieldName="BillBlNo" Caption="BL_No" Width="120" />
         <DxGridDataColumn FieldName="BillGstNo" Caption="GST No" Width="120" />
-        <DxGridDataColumn FieldName="BillPlaceOfSupply" Caption="Place of Supply" Width="120" />
+        <DxGridDataColumn FieldName="posname" Caption="Place of Supply" Width="120" />
         <DxGridDataColumn FieldName="Bill20Ft" Caption="C_20FT" Width="120" />
         <DxGridDataColumn FieldName="Bill40Ft" Caption="C_40FT" Width="120" />
         <DxGridDataColumn FieldName="BillSbNo" Caption="SB_No" Width="120" />
