--- a/FreightBKShippingWebApp/Components/Pages/JOBpage/JobExportlist.razor
+++ b/FreightBKShippingWebApp/Components/Pages/JOBpage/JobExportlist.razor
@@ -25,7 +25,7 @@
             <TitleTemplate Context="ctxjob">
                 <div class="d-flex align-items-center">
                     <i class="bi bi-briefcase-fill"></i>
-                    <span class="fs-5"> Job Export</span>
+                    <span class="fs-5"> Export Job</span>
                 </div>
             </TitleTemplate>
             <Items>
