--- a/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
+++ b/FreightBKShippingWebApp/Components/Layout/NavMenu.razor
@@ -154,7 +154,7 @@
                                @*  <DxMenuItem NavigateUrl="/invoice" Text="Purchase Invoice" IconCssClass="bi bi-clipboard-check"/> *@
                                 <DxMenuItem NavigateUrl="/jobimport" Text="Import Job" IconCssClass="bi bi-clipboard-data" />
                                 <DxMenuItem NavigateUrl="/jobexport" Text="Export Job" IconCssClass="bi bi-clipboard-data" />
-                                <DxMenuItem NavigateUrl="/bills" Text="Sale Invoice" IconCssClass="bi bi-clipboard-data" />
+                                <DxMenuItem NavigateUrl="/bill" Text="Sale Invoice" IconCssClass="bi bi-clipboard-data" />
 
                             </Items>
                         </DxMenuItem>
