--- a/FreightBKShippingWebApp/Components/Pages/BillPage/BillPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/BillPage/BillPage.razor
@@ -49,7 +49,7 @@
         <DxGridDataColumn FieldName="BillJobNo" Caption="Job No" Width="120" />
         <DxGridDataColumn FieldName="BillJobType" Caption="Job Type" Width="120" />
         <DxGridDataColumn FieldName="partyname" Caption="Customer" Width="180" />
-        <DxGridDataColumn FieldName="BillVoucherId" Caption="Voucher Type" Width="120" />
+        <DxGridDataColumn FieldName="Vouchname" Caption="Voucher Type" Width="120" />
         <DxGridDataColumn FieldName="BillBlNo" Caption="BL_No" Width="120" />
         <DxGridDataColumn FieldName="BillGstNo" Caption="GST No" Width="120" />
         <DxGridDataColumn FieldName="posname" Caption="Place of Supply" Width="120" />
