--- a/FreightBKShippingWebApp/Components/Pages/JOBpage/JobPagelist.razor
+++ b/FreightBKShippingWebApp/Components/Pages/JOBpage/JobPagelist.razor
@@ -64,7 +64,7 @@
 
 </DxGrid>
 
-<JobAddEditPage @ref="popup" OnSaved="LoadJobsAsync" JobType="Import" />
+<JobAddEditPage @ref="popup" OnSaved="LoadJobsAsync" JobType="@JobType" />
 <ConfirmationDialog />
 
 @code {
