--- a/FreightBKShippingWebApp/Components/Pages/Accounttype/AccountTypeAddEditPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/Accounttype/AccountTypeAddEditPage.razor
@@ -19,7 +19,7 @@
                 <DxTextBox @bind-Text="EditModel.AccountTypeName" />
             </DxFormLayoutItem>
 
-            <DxFormLayoutItem Caption="Group ID">
+            <DxFormLayoutItem Caption="Group ">
                 <DxComboBox Data="@groupList"
                             TextFieldName="AccountGroupName"
                             ValueFieldName="AccountGroupId"
